[B]Version 1.1.26[/B]
chaturbate - Online Favorites fix
added pornez.net