@@ -1,3 +1,7 @@
 [B]Version 1.1.26[/B]
 chaturbate - Online Favorites fix
 added pornez.net
+bongacams minor cleanup
+vipporns minor cleanup
+daftsex fix multi word search
+
